Add comments to python notebooks

--- a/Python_Notebook/Add_to_db.ipynb
+++ b/Python_Notebook/Add_to_db.ipynb
@@ -17,54 +17,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(280525,\n",
-       " 1782631,\n",
-       " 'Gabriel',\n",
-       " 'https://fr.wikipedia.org/wiki?curid=1782631',\n",
-       " '/home/gabriel/Documents/MPRI/Web_Data_Management/wikiextractor-master/text/10/AF/wiki_47',\n",
-       " 16)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "conn = sqlite3.connect('../Database/Database.db')\n",
-    "cursor = conn.cursor()\n",
-    "cursor.execute(\"select * from Articles where Title='Gabriel'\")\n",
-    "cursor.fetchone()"
+    "#### This notebook contains all the commands to push data into database\n",
+    "#### Indeed, all the data produced in the other notebooks is saved into json files\n",
+    "#### The aim of this notebook is to process each one of these json files and add the data into database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Gabriel Plançon',)\n"
-     ]
-    }
-   ],
-   "source": [
-    "conn = sqlite3.connect('../Database/Database.db')\n",
-    "cursor = conn.cursor()\n",
-    "request=\"Select Title FROM Articles WHERE ID_ARTICLE='5832799'\"\n",
-    "cursor.execute(request)\n",
-    "print(cursor.fetchone())\n",
-    "conn.close()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -72,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this file contains all the source and target of each link in the articles\n",
     "f = open('../Database/link_dict_inverse.json')\n",
     "link_dict_inverse = json.load(f)\n",
     "f.close()\n",
@@ -107,29 +74,31 @@
     }
    ],
    "source": [
-    "# f = open('../Database/dataset.json')\n",
-    "# dataset = json.load(f)\n",
-    "# f.close()\n",
-    "# dataset={int(key):[value[0],int(value[1]),value[2],value[3],value[4]] for key,value in dataset.items()}\n",
+    "# this file contains all the informations of each article\n",
+    "# ID ROW = The row in the tf-idf, M, C matrices ; ID article : the real id of the article ; \n",
+    "# title = title of the article ; url :url; location : absolute path towards the file containing the wikipedia article;\n",
+    "# line_index : the line into the file (each line of the file is a wikipedia article) \n",
+    "f = open('../Database/dataset.json')\n",
+    "dataset = json.load(f)\n",
+    "f.close()\n",
+    "dataset={int(key):[value[0],int(value[1]),value[2],value[3],value[4]] for key,value in dataset.items()}\n",
     "\n",
     "conn = sqlite3.connect('../Database/Database.db')\n",
     "cursor = conn.cursor()\n",
-    "# # cursor.execute(\"Drop Table Articles\")\n",
-    "# # create_db=\"CREATE TABLE Articles(ID_ROW NUMERIC,ID_ARTICLE NUMERIC,Title TEXT,URL TEXT,Location TEXT,Line_index NUMERIC);\"\n",
-    "# # cursor.execute(create_db)\n",
-    "# index=\"CREATE INDEX index_id_article2 ON Articles (ID_ARTICLE);\"\n",
-    "# cursor.execute(index)\n",
-    "# index=\"CREATE INDEX index_id ON Articles (ID_ROW);\"\n",
-    "# cursor.execute(index)\n",
+    "# cursor.execute(\"Drop Table Articles\")\n",
+    "create_db=\"CREATE TABLE Articles(ID_ROW NUMERIC,ID_ARTICLE NUMERIC,Title TEXT,URL TEXT,Location TEXT,Line_index NUMERIC);\"\n",
+    "cursor.execute(create_db)\n",
+    "index=\"CREATE INDEX index_id_article2 ON Articles (ID_ARTICLE);\"\n",
+    "cursor.execute(index)\n",
+    "index=\"CREATE INDEX index_id ON Articles (ID_ROW);\"\n",
+    "cursor.execute(index)\n",
     "\n",
     "\n",
-    "# sq=\"'\" #single quote\n",
-    "# for key,value in dataset.items():\n",
-    "#     tmp=value[1].replace(\"'\",\" \")\n",
-    "#     request='Insert into Articles Values (%s,%s,%s,%s,%s,%s)'%(key,value[0],sq+tmp+sq,sq+value[2]+sq,sq+value[3]+sq,value[4])\n",
-    "# #     print(request)\n",
-    "# #     break\n",
-    "#     cursor.execute(request)\n",
+    "sq=\"'\" #single quote\n",
+    "for key,value in dataset.items():\n",
+    "    tmp=value[1].replace(\"'\",\" \")\n",
+    "    request='Insert into Articles Values (%s,%s,%s,%s,%s,%s)'%(key,value[0],sq+tmp+sq,sq+value[2]+sq,sq+value[3]+sq,value[4])\n",
+    "    cursor.execute(request)\n",
     "conn.commit()\n",
     "conn.close()"
    ]
@@ -140,6 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This file contains the page rank vector of the articles\n",
+    "r=np.load('../Database/r.npy')\n",
+    "\n",
     "conn=sqlite3.connect('../Database/Database.db')\n",
     "cursor=conn.cursor()\n",
     "cursor.execute(\"DROP TABLE R\")\n",
@@ -148,8 +120,6 @@
     "index=\"CREATE INDEX index_id_r ON R(ID);\"\n",
     "cursor.execute(index)\n",
     "\n",
-    "# cursor.execute(\"DELETE FROM R\")\n",
-    "r=np.load('../Database/r.npy')\n",
     "sq=\"'\"\n",
     "for i in range(len(r)):\n",
     "    request='Insert into R Values (%d,%s)'%(i,sq+str(r[i,0])+sq)\n",
@@ -164,6 +134,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this file contains for each article its id and the index of the row associated in all matrices (R for Page Rank,\n",
+    "# C for tf-idf, M for tf-idf, word2vec vectors)\n",
+    "f = open('../Database/indices_dict.json')\n",
+    "indices_dict = json.load(f)\n",
+    "f.close()\n",
+    "\n",
     "conn=sqlite3.connect('../Database/Database.db')\n",
     "cursor=conn.cursor()\n",
     "cursor.execute(\"Drop table Transitional_id_article_index_R\")\n",
@@ -172,9 +148,6 @@
     "index=\"CREATE INDEX index_id_article ON Transitional_id_article_index_R(ID_ARTICLE);\"\n",
     "cursor.execute(index)\n",
     "\n",
-    "f = open('../Database/indices_dict.json')\n",
-    "indices_dict = json.load(f)\n",
-    "f.close()\n",
     "for key,value in indices_dict.items():\n",
     "    request='Insert into Transitional_id_article_index_R Values (%d,%d)'%(int(key),value)\n",
     "    cursor.execute(request)\n",
@@ -200,6 +173,16 @@
     }
    ],
    "source": [
+    "# new_voc_dict contains all the words of the tf-idf matrix (each word is a column) as key \n",
+    "# and the index of the column as value\n",
+    "# M is the M matrix in the tf-idf process. Contains for each cell the number of times a word is seen in an article\n",
+    "\n",
+    "f = open('../Database/new_voc_dict.json')\n",
+    "new_voc_dict = json.load(f)\n",
+    "f.close()\n",
+    "M = load_npz(\"../Database/M.npz\")\n",
+    "somme=np.sum(M,axis=0)\n",
+    "\n",
     "conn=sqlite3.connect('../Database/Database.db')\n",
     "cursor=conn.cursor()\n",
     "cursor.execute(\"Drop table Vocabulary\")\n",
@@ -208,12 +191,7 @@
     "index=\"CREATE INDEX index_id_word ON Vocabulary(WORD);\"\n",
     "cursor.execute(index)\n",
     "\n",
-    "f = open('../Database/new_voc_dict.json')\n",
-    "new_voc_dict = json.load(f)\n",
-    "f.close()\n",
-    "M = load_npz(\"../Database/M.npz\")\n",
     "sq=\"'\"\n",
-    "somme=np.sum(M,axis=0)\n",
     "count=0\n",
     "\n",
     "for key,value in new_voc_dict.items():\n",
@@ -224,117 +202,6 @@
     "        print(count)\n",
     "conn.commit()\n",
     "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 1888142)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(somme.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1347630,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cursor.execute(\"Select count(WORD) from Vocabulary\")\n",
-    "cursor.fetchone()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f7e79602650>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conn=sqlite3.connect('../Database/Database.db')\n",
-    "cursor=conn.cursor()\n",
-    "cursor.execute(\"Select count(Value) from R\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn=sqlite3.connect('/home/gabriel/Downloads/ex2.db')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f7334013420>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conn=sqlite3.connect('../Database/word2vec.db')\n",
-    "cursor=conn.cursor()\n",
-    "cursor.execute(\"select count(ID) from Vectors\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2014580,)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cursor.fetchone()"
    ]
   }
  ],
