--- a/Python_Notebook/Get Order Wikipedia.ipynb
+++ b/Python_Notebook/Get Order Wikipedia.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The notebook is just an example how to get the results of the wikipedia search engine when querying"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -18,7 +25,7 @@
    "source": [
     "header=\"https://fr.wikipedia.org/w/index.php?search=\"\n",
     "query=\"au+secours\"\n",
-    "contents = urllib.request.urlopen(header+query).read()\n",
+    "contents = urllib.request.urlopen(header+query+'+,').read()\n",
     "root = ET.fromstring(contents)"
    ]
   },
