--- a/Python_Notebook/PageRank.ipynb
+++ b/Python_Notebook/PageRank.ipynb
@@ -6,13 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gensim\n",
-    "from nltk.corpus import stopwords \n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.random_projection import GaussianRandomProjection\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
     "import os\n",
     "import json\n",
     "import urllib.parse\n",
@@ -20,9 +13,20 @@
     "import numpy as np\n",
     "from scipy.sparse import coo_matrix,csc_matrix\n",
     "import operator\n",
-    "import pandas as pd\n",
     "import time\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook computes 4 things :\n",
+    "\n",
+    "- the link dict : list of links (id of the forwarding article) in each article\n",
+    "- the link dict inverse : list of articles ids leading to an article id\n",
+    "- the page rank vector of each article\n",
+    "- indices dict : a dictionnary which associates an article id to an row/column index"
    ]
   },
   {
@@ -78,7 +82,7 @@
     "    return link_dict_inverse\n",
     "\n",
     "# give a line/column number to each article\n",
-    "# because we creating the matrix we don't use the id anymore, only the nb of line/row\n",
+    "# because when creating the matrix we don't use the id anymore, only the nb of line/row\n",
     "def get_column_id(title_dict):\n",
     "    indices_dict={}\n",
     "    indices_dict_inverse={}\n",
@@ -141,6 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# main function\n",
+    "# compute the list of links of each article\n",
     "path='/home/gabriel/Documents/MPRI/Web_Data_Management/wikiextractor-master/text/'\n",
     "title_list=[]\n",
     "text_list=[]\n",
@@ -163,69 +169,10 @@
     "                if 'text' in a:\n",
     "                    title_dict[a['id']]=a['title']\n",
     "                    title_dict_inverse[a['title']]=a['id']\n",
-    "#                     location_dic[a['id']]=path+i+'/'+j+'/'+filename\n",
-    "#                     www_adress[a['id']]=a['url']\n",
-    "#                     text_dict[a['id']]=remove_tag(a['text'])\n",
     "                    urls=re.findall(r'href=[\\'\"]?([^\\'\" >]+)', a['text'])\n",
-    "#                     print(a['id'])\n",
     "                    title_list_iri=[upper_sentence(urllib.parse.unquote(i)) for i in urls]\n",
     "                    link_dict[a['id']]=title_list_iri\n",
-    "                count+=1\n",
-    "#                 if count==100:\n",
-    "#                     s=q\n",
-    "    \n",
-    "#     if w==0:\n",
-    "#         break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Centre sportif Max-Rousié': '7398007',\n",
-       " 'César Cabral': '7398015',\n",
-       " 'Fibrose pulmonaire idiopathique': '7398004',\n",
-       " 'Hervé de Déols': '7398028',\n",
-       " 'Lan Medina': '7398006',\n",
-       " 'Mauricio Robles': '7398033',\n",
-       " 'Mohammed Effendi Chabân': '7398014',\n",
-       " 'Piotr Pissarev': '7398053',\n",
-       " 'Tuerie du Washington Navy Yard': '7398043',\n",
-       " 'Uperoleia saxatilis': '7398010'}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "title_dict_inverse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# title_dict['1333743'],link_dict['1333743']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in link_dict.keys():\n",
-    "#     print(i)\n",
-    "\n",
-    "# title_dict['1364839'],link_dict['1364839']"
+    "                count+=1"
    ]
   },
   {
@@ -242,13 +189,29 @@
     }
    ],
    "source": [
+    "# at this point, each article is represented in link_dict by a id and a list of titles of articles leading to them \n",
+    "\n",
+    "#transform the list of article titles by a list of ids\n",
     "link_dict=compute_name_to_id_of_article(title_dict_inverse,link_dict)\n",
+    "\n",
+    "#removes duplicates in the links of each page\n",
     "link_dict=clean_links(link_dict)\n",
+    "\n",
+    "#computes the inverse dictionnary of link_dict, where each link has a list of articles ids where each of these\n",
+    "# article lead to him\n",
     "link_dict_inverse=construct_inverse_link_dict(link_dict)\n",
-    "# indices_dict,indices_dict_inverse=get_column_id(title_dict)\n",
-    "# row,column,data=prepare_data_sparse(title_dict,link_dict,indices_dict)\n",
-    "# M=csc_matrix((data, (row, column)), shape=(len(title_dict),len(title_dict)))\n",
-    "# r=page_rank(title_dict,M,BETA=0.85,eps=1e-5)"
+    "\n",
+    "# transform all the ids into number of column and row (we don't want to use the ids anymore)\n",
+    "indices_dict,indices_dict_inverse=get_column_id(title_dict)\n",
+    "\n",
+    "#prepare the data to compute the Stochastic matrix for Page Rank\n",
+    "row,column,data=prepare_data_sparse(title_dict,link_dict,indices_dict)\n",
+    "\n",
+    "# compute this stochastic matrix, we use the sparse format because this matrix is essentially filled whith 0\n",
+    "M=csc_matrix((data, (row, column)), shape=(len(title_dict),len(title_dict)))\n",
+    "\n",
+    "# computes the page rank vector\n",
+    "r=page_rank(title_dict,M,BETA=0.85,eps=1e-5)"
    ]
   },
   {
@@ -337,37 +300,6 @@
     "f = open(\"../Database/indices_dict.json\",\"w\")\n",
     "f.write(j)\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "143862\n"
-     ]
-    }
-   ],
-   "source": [
-    "def save_vectors():\n",
-    "    count=0\n",
-    "    file = open(\"articles_embedding.tsv\",\"w\")\n",
-    "    file2 = open(\"article_title.tsv\",\"w\")\n",
-    "    for key,value in wv_dic.items():\n",
-    "        if type(value)==np.ndarray:\n",
-    "            count+=1\n",
-    "            a=[str(i) for i in value]\n",
-    "            a='\\t'.join(a)+\"\\n\"\n",
-    "            file.write(a)\n",
-    "            file2.write(title_dic[key]+\"\\n\")\n",
-    "    file.close()\n",
-    "    file2.close()\n",
-    "    print(count)\n",
-    "save_vectors()"
    ]
   }
  ],
