--- a/Python_Notebook/Spelling_Correcter.ipynb
+++ b/Python_Notebook/Spelling_Correcter.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook contains an algorithm to correct sentences. The method is a mix of Peter Norvig article (https://norvig.com/spell-correct.html) and word2vec"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -27,7 +34,7 @@
     "stop_words=[\"a\",\"abord\",\"absolument\",\"afin\",\"ah\",\"ai\",\"aie\",\"aient\",\"aies\",\"ailleurs\",\"ainsi\",\"ait\",\"allaient\",\"allo\",\"allons\",\"allô\",\"alors\",\"anterieur\",\"anterieure\",\"anterieures\",\"apres\",\"après\",\"as\",\"assez\",\"attendu\",\"au\",\"aucun\",\"aucune\",\"aucuns\",\"aujourd\",\"aujourd'hui\",\"aupres\",\"auquel\",\"aura\",\"aurai\",\"auraient\",\"aurais\",\"aurait\",\"auras\",\"aurez\",\"auriez\",\"aurions\",\"aurons\",\"auront\",\"aussi\",\"autre\",\"autrefois\",\"autrement\",\"autres\",\"autrui\",\"aux\",\"auxquelles\",\"auxquels\",\"avaient\",\"avais\",\"avait\",\"avant\",\"avec\",\"avez\",\"aviez\",\"avions\",\"avoir\",\"avons\",\"ayant\",\"ayez\",\"ayons\",\"b\",\"bah\",\"bas\",\"basee\",\"bat\",\"beau\",\"beaucoup\",\"bien\",\"bigre\",\"bon\",\"boum\",\"bravo\",\"brrr\",\"c\",\"car\",\"ce\",\"ceci\",\"cela\",\"celle\",\"celle-ci\",\"celle-là\",\"celles\",\"celles-ci\",\"celles-là\",\"celui\",\"celui-ci\",\"celui-là\",\"celà\",\"cent\",\"cependant\",\"certain\",\"certaine\",\"certaines\",\"certains\",\"certes\",\"ces\",\"cet\",\"cette\",\"ceux\",\"ceux-ci\",\"ceux-là\",\"chacun\",\"chacune\",\"chaque\",\"cher\",\"chers\",\"chez\",\"chiche\",\"chut\",\"chère\",\"chères\",\"ci\",\"cinq\",\"cinquantaine\",\"cinquante\",\"cinquantième\",\"cinquième\",\"clac\",\"clic\",\"combien\",\"comme\",\"comment\",\"comparable\",\"comparables\",\"compris\",\"concernant\",\"contre\",\"couic\",\"crac\",\"d\",\"da\",\"dans\",\"de\",\"debout\",\"dedans\",\"dehors\",\"deja\",\"delà\",\"depuis\",\"dernier\",\"derniere\",\"derriere\",\"derrière\",\"des\",\"desormais\",\"desquelles\",\"desquels\",\"dessous\",\"dessus\",\"deux\",\"deuxième\",\"deuxièmement\",\"devant\",\"devers\",\"devra\",\"devrait\",\"different\",\"differentes\",\"differents\",\"différent\",\"différente\",\"différentes\",\"différents\",\"dire\",\"directe\",\"directement\",\"dit\",\"dite\",\"dits\",\"divers\",\"diverse\",\"diverses\",\"dix\",\"dix-huit\",\"dix-neuf\",\"dix-sept\",\"dixième\",\"doit\",\"doivent\",\"donc\",\"dont\",\"dos\",\"douze\",\"douzième\",\"dring\",\"droite\",\"du\",\"duquel\",\"durant\",\"dès\",\"début\",\"désormais\",\"e\",\"effet\",\"egale\",\"egalement\",\"egales\",\"eh\",\"elle\",\"elle-même\",\"elles\",\"elles-mêmes\",\"en\",\"encore\",\"enfin\",\"entre\",\"envers\",\"environ\",\"es\",\"essai\",\"est\",\"et\",\"etant\",\"etc\",\"etre\",\"eu\",\"eue\",\"eues\",\"euh\",\"eurent\",\"eus\",\"eusse\",\"eussent\",\"eusses\",\"eussiez\",\"eussions\",\"eut\",\"eux\",\"eux-mêmes\",\"exactement\",\"excepté\",\"extenso\",\"exterieur\",\"eûmes\",\"eût\",\"eûtes\",\"f\",\"fais\",\"faisaient\",\"faisant\",\"fait\",\"faites\",\"façon\",\"feront\",\"fi\",\"flac\",\"floc\",\"fois\",\"font\",\"force\",\"furent\",\"fus\",\"fusse\",\"fussent\",\"fusses\",\"fussiez\",\"fussions\",\"fut\",\"fûmes\",\"fût\",\"fûtes\",\"g\",\"gens\",\"h\",\"ha\",\"haut\",\"hein\",\"hem\",\"hep\",\"hi\",\"ho\",\"holà\",\"hop\",\"hormis\",\"hors\",\"hou\",\"houp\",\"hue\",\"hui\",\"huit\",\"huitième\",\"hum\",\"hurrah\",\"hé\",\"hélas\",\"i\",\"ici\",\"il\",\"ils\",\"importe\",\"j\",\"je\",\"jusqu\",\"jusque\",\"juste\",\"k\",\"l\",\"la\",\"laisser\",\"laquelle\",\"las\",\"le\",\"lequel\",\"les\",\"lesquelles\",\"lesquels\",\"leur\",\"leurs\",\"longtemps\",\"lors\",\"lorsque\",\"lui\",\"lui-meme\",\"lui-même\",\"là\",\"lès\",\"m\",\"ma\",\"maint\",\"maintenant\",\"mais\",\"malgre\",\"malgré\",\"maximale\",\"me\",\"meme\",\"memes\",\"merci\",\"mes\",\"mien\",\"mienne\",\"miennes\",\"miens\",\"mille\",\"mince\",\"mine\",\"minimale\",\"moi\",\"moi-meme\",\"moi-même\",\"moindres\",\"moins\",\"mon\",\"mot\",\"moyennant\",\"multiple\",\"multiples\",\"même\",\"mêmes\",\"n\",\"na\",\"naturel\",\"naturelle\",\"naturelles\",\"ne\",\"neanmoins\",\"necessaire\",\"necessairement\",\"neuf\",\"neuvième\",\"ni\",\"nombreuses\",\"nombreux\",\"nommés\",\"non\",\"nos\",\"notamment\",\"notre\",\"nous\",\"nous-mêmes\",\"nouveau\",\"nouveaux\",\"nul\",\"néanmoins\",\"nôtre\",\"nôtres\",\"o\",\"oh\",\"ohé\",\"ollé\",\"olé\",\"on\",\"ont\",\"onze\",\"onzième\",\"ore\",\"ou\",\"ouf\",\"ouias\",\"oust\",\"ouste\",\"outre\",\"ouvert\",\"ouverte\",\"ouverts\",\"o|\",\"où\",\"p\",\"paf\",\"pan\",\"par\",\"parce\",\"parfois\",\"parle\",\"parlent\",\"parler\",\"parmi\",\"parole\",\"parseme\",\"partant\",\"particulier\",\"particulière\",\"particulièrement\",\"pas\",\"passé\",\"pendant\",\"pense\",\"permet\",\"personne\",\"personnes\",\"peu\",\"peut\",\"peuvent\",\"peux\",\"pff\",\"pfft\",\"pfut\",\"pif\",\"pire\",\"pièce\",\"plein\",\"plouf\",\"plupart\",\"plus\",\"plusieurs\",\"plutôt\",\"possessif\",\"possessifs\",\"possible\",\"possibles\",\"pouah\",\"pour\",\"pourquoi\",\"pourrais\",\"pourrait\",\"pouvait\",\"prealable\",\"precisement\",\"premier\",\"première\",\"premièrement\",\"pres\",\"probable\",\"probante\",\"procedant\",\"proche\",\"près\",\"psitt\",\"pu\",\"puis\",\"puisque\",\"pur\",\"pure\",\"q\",\"qu\",\"quand\",\"quant\",\"quant-à-soi\",\"quanta\",\"quarante\",\"quatorze\",\"quatre\",\"quatre-vingt\",\"quatrième\",\"quatrièmement\",\"que\",\"quel\",\"quelconque\",\"quelle\",\"quelles\",\"quelqu'un\",\"quelque\",\"quelques\",\"quels\",\"qui\",\"quiconque\",\"quinze\",\"quoi\",\"quoique\",\"r\",\"rare\",\"rarement\",\"rares\",\"relative\",\"relativement\",\"remarquable\",\"rend\",\"rendre\",\"restant\",\"reste\",\"restent\",\"restrictif\",\"retour\",\"revoici\",\"revoilà\",\"rien\",\"s\",\"sa\",\"sacrebleu\",\"sait\",\"sans\",\"sapristi\",\"sauf\",\"se\",\"sein\",\"seize\",\"selon\",\"semblable\",\"semblaient\",\"semble\",\"semblent\",\"sent\",\"sept\",\"septième\",\"sera\",\"serai\",\"seraient\",\"serais\",\"serait\",\"seras\",\"serez\",\"seriez\",\"serions\",\"serons\",\"seront\",\"ses\",\"seul\",\"seule\",\"seulement\",\"si\",\"sien\",\"sienne\",\"siennes\",\"siens\",\"sinon\",\"six\",\"sixième\",\"soi\",\"soi-même\",\"soient\",\"sois\",\"soit\",\"soixante\",\"sommes\",\"son\",\"sont\",\"sous\",\"souvent\",\"soyez\",\"soyons\",\"specifique\",\"specifiques\",\"speculatif\",\"stop\",\"strictement\",\"subtiles\",\"suffisant\",\"suffisante\",\"suffit\",\"suis\",\"suit\",\"suivant\",\"suivante\",\"suivantes\",\"suivants\",\"suivre\",\"sujet\",\"superpose\",\"sur\",\"surtout\",\"t\",\"ta\",\"tac\",\"tandis\",\"tant\",\"tardive\",\"te\",\"tel\",\"telle\",\"tellement\",\"telles\",\"tels\",\"tenant\",\"tend\",\"tenir\",\"tente\",\"tes\",\"tic\",\"tien\",\"tienne\",\"tiennes\",\"tiens\",\"toc\",\"toi\",\"toi-même\",\"ton\",\"touchant\",\"toujours\",\"tous\",\"tout\",\"toute\",\"toutefois\",\"toutes\",\"treize\",\"trente\",\"tres\",\"trois\",\"troisième\",\"troisièmement\",\"trop\",\"très\",\"tsoin\",\"tsouin\",\"tu\",\"té\",\"u\",\"un\",\"une\",\"unes\",\"uniformement\",\"unique\",\"uniques\",\"uns\",\"v\",\"va\",\"vais\",\"valeur\",\"vas\",\"vers\",\"via\",\"vif\",\"vifs\",\"vingt\",\"vivat\",\"vive\",\"vives\",\"vlan\",\"voici\",\"voie\",\"voient\",\"voilà\",\"vont\",\"vos\",\"votre\",\"vous\",\"vous-mêmes\",\"vu\",\"vé\",\"vôtre\",\"vôtres\",\"w\",\"x\",\"y\",\"z\",\"zut\",\"à\",\"â\",\"ça\",\"ès\",\"étaient\",\"étais\",\"était\",\"étant\",\"état\",\"étiez\",\"étions\",\"été\",\"étée\",\"étées\",\"étés\",\"êtes\",\"être\",\"ô\"]\n",
     "stop_words+=[\"»\",\"«\",\"''\",\" \",\"–\"]\n",
     "stop_words=set(stop_words)\n",
-    "table = str.maketrans(string.punctuation, ' '*len(string.punctuation))\n"
+    "table = str.maketrans(string.punctuation, ' '*len(string.punctuation))"
    ]
   },
   {
@@ -114,6 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#computes the frequency of each word\n",
+    "\n",
     "length_voc=sum([value for key,value in voc_dict.items()])\n",
     "for key in voc_dict.keys():\n",
     "    voc_dict[key]/=length_voc"
@@ -128,101 +137,10 @@
     "j = json.dumps(voc_dict)\n",
     "f = open(\"../Database/voc_dict.json\",\"w\")\n",
     "f.write(j)\n",
+    "f.close()\n",
+    "f = open('../Database/voc_dict.json')\n",
+    "voc_dict = json.load(f)\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def modify_word(word):\n",
-    "    letters=list(\"abcdefghijklmnopqrstuvwxyzéèàêûöù\")\n",
-    "    if type(word)==str:\n",
-    "        word_list=list(word)\n",
-    "        \n",
-    "    modify_1_letter=[]\n",
-    "    for i in range(0,len(word_list)):\n",
-    "        for j in range(len(letters)):\n",
-    "            tmp=list(word)\n",
-    "            tmp[i]=letters[j]\n",
-    "            modify_1_letter.append(tmp)\n",
-    "\n",
-    "    swap_one_letter=[]\n",
-    "    for i in range(0,len(word_list)-1):\n",
-    "        tmp=list(word)\n",
-    "        a=word_list[i]\n",
-    "        tmp[i]=tmp[i+1]\n",
-    "        tmp[i+1]=a\n",
-    "        swap_one_letter.append(tmp)\n",
-    "    \n",
-    "    insert_one_letter=[]\n",
-    "    for i in range(0,len(word_list)+1):\n",
-    "        for j in range(len(letters)):\n",
-    "            tmp=list(word)\n",
-    "            tmp.insert(i,letters[j])\n",
-    "            insert_one_letter.append(tmp)\n",
-    "    \n",
-    "    missing_one_letter=[]\n",
-    "    for i in range(0,len(word_list)):\n",
-    "        tmp=list(word)\n",
-    "        del tmp[i]\n",
-    "        missing_one_letter.append(tmp)\n",
-    "    \n",
-    "    return [''.join(i) for i in modify_1_letter+swap_one_letter+insert_one_letter+missing_one_letter]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "le soleil est une école saint au qui se compose\n"
-     ]
-    }
-   ],
-   "source": [
-    "def distance(a,b):\n",
-    "    return np.mean((a.reshape(1,-1)-b.reshape(1,-1))**2)\n",
-    "\n",
-    "somme=lambda x:sum([i[1] for i in x])\n",
-    "\n",
-    "query_sentence=\"Le Soleil est une étole naine jaue qui se compose\"\n",
-    "query_sentence_ori=query_sentence.lower().replace('\\n', ' ').split(' ')\n",
-    "query_sentence=query_sentence.translate(table).lower().replace('\\n', ' ').split(' ')\n",
-    "already_in=[i for i in query_sentence if i in voc_dict]\n",
-    "w2v_query=np.mean(np.array([model[i] for i in already_in if i in model]),axis=0)\n",
-    "query_sentence=[i for i in query_sentence if i not in voc_dict]\n",
-    "for query in query_sentence:\n",
-    "    l=[modify_word(query)]+[modify_word(i) for i in set(modify_word(query))]\n",
-    "    reco = set([item for sublist in l for item in sublist if item in voc_dict])\n",
-    "    dict1 = Counter(query) \n",
-    "    reco_list=[]\n",
-    "    for i in reco:\n",
-    "        dict2 = Counter(i)\n",
-    "        commonDict = dict1 & dict2\n",
-    "        diff1=len(query)/np.sum([value for key,value in commonDict.items()])\n",
-    "        diff2=abs(len(query)-len(i))\n",
-    "        reco_list.append([i,voc_dict[i]*(1/diff1)*(1/(1+diff2))])\n",
-    "    reco_list=sorted(reco_list,key=lambda x:x[1],reverse=True)\n",
-    "    reco_list=[[i[0],float(i[1])/somme(reco_list)] for i in reco_list]\n",
-    "    w2v=[[i[0],distance(model[i[0]],w2v_query)] for i in reco_list if i[0] in model]\n",
-    "#     w2v=sorted(w2v,key=lambda x:x[1])\n",
-    "    w2v=[[i[0],i[1]/somme(w2v)] for i in w2v]\n",
-    "#     print(w2v)\n",
-    "#     print()\n",
-    "#     print(reco_list)\n",
-    "    both=sorted([[w2v[i][0],-0.8*w2v[i][1]+0.2*reco_list[i][1]] for i in range(len(w2v))],key=lambda x:x[1],reverse=True)\n",
-    "#     print()\n",
-    "#     print(both)\n",
-    "#     print()\n",
-    "    query_sentence_ori=[i if i!=query else both[0][0] for i in query_sentence_ori]\n",
-    "print(' '.join(query_sentence_ori))"
    ]
   },
   {
@@ -250,7 +168,6 @@
     }
    ],
    "source": [
-    "path=\"/home/gabriel/Documents/MPRI/Web_Data_Management/search_engine/Database/\"\n",
     "get_correct_sentence(\"théorie des graphz\")"
    ]
   },
@@ -279,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function which modifies a word by doing insert, removal and swapping og characters\n",
     "def modify_word(word):\n",
     "    letters=list(\"abcdefghijklmnopqrstuvwxyzéèàêûöù\")\n",
     "    if type(word)==str:\n",
@@ -318,7 +236,7 @@
     "    return np.mean((a.reshape(1,-1)-b.reshape(1,-1))**2)\n",
     "\n",
     "def get_correct_sentence(sentence):\n",
-    "    \n",
+    "    path=\"/home/gabriel/Documents/MPRI/Web_Data_Management/search_engine/Database/\"\n",
     "    somme=lambda x:sum([i[1] for i in x])\n",
     "    query_sentence_ori=sentence.lower().replace('\\n', ' ').split(' ')\n",
     "    # query_sentence=sentence.translate(table).lower().replace('\\n', ' ').split(' ')\n",
@@ -364,51 +282,6 @@
     "        print(b-a,c-b)\n",
     "    conn.close()\n",
     "    return ' '.join(query_sentence_ori)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.4595694541931152"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=time.time()\n",
-    "f = open('../Database/voc_dict.json')\n",
-    "voc_dict = json.load(f)\n",
-    "f.close()\n",
-    "b=time.time()\n",
-    "b-a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "60419"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(voc_dict)"
    ]
   }
  ],
