--- a/Python_Notebook/TF_IDF.ipynb
+++ b/Python_Notebook/TF_IDF.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook computes the tf-idf matrix C"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -64,32 +71,8 @@
     "    voc_dict={key:value for key,value in voc_dict.items() if value not in index_to_remove}\n",
     "    voc_dict_inverse={key:value for key,value in voc_dict_inverse.items() if key not in index_to_remove}\n",
     "    voc_dict_triplet={key:value for key,value in voc_dict_triplet.items() if key not in index_to_remove}\n",
-    "#     return voc_dict,voc_dict_inverse,voc_dict_triplet\n",
+    "    return voc_dict,voc_dict_inverse,voc_dict_triplet\n",
     "\n",
-    "# def get_matrix(voc_dict_triplet):\n",
-    "#     row=[]\n",
-    "#     column=[]\n",
-    "#     data=[]\n",
-    "#     index=0\n",
-    "#     new_voc_dict={}\n",
-    "#     for key,value in voc_dict_triplet.items():\n",
-    "#         new_voc_dict[voc_dict_inverse[key]]=index\n",
-    "#         for triplet in value:\n",
-    "#             row.append(triplet[0])\n",
-    "#             column.append(index)\n",
-    "#             data.append(triplet[1])\n",
-    "#         index+=1\n",
-    "#     return csc_matrix((data, (row, column)), shape=(np.max(row)+1,len(voc_dict_triplet))),new_voc_dict\n",
-    "\n",
-    "def get_triplet(key):\n",
-    "    files_list=glob.glob('*data_*')\n",
-    "    json_list=[]\n",
-    "    for file in files_list:\n",
-    "        f = open(file)\n",
-    "        dic = json.load(f)\n",
-    "        json_list.append(dic)\n",
-    "        f.close()\n",
-    "    del json_list\n",
     "\n",
     "def get_matrix(voc_dict_triplet):\n",
     "    row=[]\n",
@@ -118,6 +101,18 @@
     "    B=B.tocsc()\n",
     "    return B\n",
     "    \n",
+    "# def increase_title_weights2(C):\n",
+    "#     for i in range(C.shape[0]):\n",
+    "#         article_title=dataset[i][1]\n",
+    "#         counter_text,counter_bigrams=get_counters(article_title)\n",
+    "#         if len(counter_text)==1:\n",
+    "#             for key in counter_text.keys():\n",
+    "#                 if key in new_voc_dict:\n",
+    "#                     C[i,new_voc_dict[key]]=2*C[i,new_voc_dict[key]]\n",
+    "#         if i%10000==0:\n",
+    "#             print(i)\n",
+    "#     return C    \n",
+    "    \n",
     "def get_C(M,dataset,new_voc_dict):\n",
     "    B=M.copy()\n",
     "    B.data=np.log10(B.data)+1\n",
@@ -128,20 +123,6 @@
     "    del A\n",
     "    del B\n",
     "    return C\n",
-    "\n",
-    "def get_text(adress,line,query):\n",
-    "    with open(adress) as f:\n",
-    "        lines = [line.rstrip('\\n') for line in f]\n",
-    "    text=json.loads(lines[line])\n",
-    "    text=remove_tag(text['text'])\n",
-    "    text=highlight_text(text,query)\n",
-    "    return text\n",
-    "    \n",
-    "def highlight_text(text,query):\n",
-    "    for i in query.split(' '):\n",
-    "        text=text.replace(i, \"<b>\"+i+\"</b>\")\n",
-    "    return text\n",
-    "    \n",
     "\n",
     "def get_closest_articles(C,M,new_voc_dict,dataset,query,k=50):\n",
     "    counter_words,counter_bigrams=get_counters(query)\n",
@@ -158,18 +139,6 @@
     "    dist = np.sum(dist**2, axis=1)\n",
     "    argsort=np.argsort(dist)[::-1]\n",
     "    return [dataset[argsort[i]] for i in range(k)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# conn = sqlite3.connect('../Database/Database.db')\n",
-    "# cursor = conn.cursor()\n",
-    "# create_db=\"CREATE TABLE TMP(ID_WORD NUMERIC,KEY Text,ID_ARTICLE Numeric,);\"\n",
-    "# cursor.execute(create_db)"
    ]
   },
   {
@@ -264,135 +233,12 @@
     "                    if count%100000==0:\n",
     "                        somme=lambda  x:sum([i[1]*len(i[0]) for i in x])\n",
     "                        \n",
-    "                        quartile1=np.percentile([somme(value) for key,value in voc_dict_triplet.items()],70)\n",
-    "#                         quartile2=np.percentile([somme(value) for key,value in voc_dict_triplet.items()],99)\n",
-    "                        \n",
+    "                        quartile1=np.percentile([somme(value) for key,value in voc_dict_triplet.items()],70)                        \n",
     "                        index_to_remove=set([key for key,value in voc_dict_triplet.items() if (somme(value)<=quartile1)])\n",
-    "#                          or somme(value)>=quartile2)\n",
-    "#                         print(quartile1,quartile2)\n",
     "                        print(quartile1)\n",
-    "#                         print(index_to_remove)\n",
-    "#                         assert(True==False)\n",
     "                        voc_dict_triplet={key:value for key,value in voc_dict_triplet.items() if key not in index_to_remove}\n",
     "                        \n",
     "                        print(count,len(voc_dict_triplet),sys.getsizeof(voc_dict_triplet)/1024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "somme=lambda  x:sum([i[1] for i in x])\n",
-    "quartile1=np.percentile([somme(value) for key,value in voc_dict_triplet.items()],30)\n",
-    "#                         quartile2=np.percentile([somme(value) for key,value in voc_dict_triplet.items()],99)\n",
-    "\n",
-    "index_to_remove=set([key for key,value in voc_dict_triplet.items() if (somme(value)<=quartile1)])\n",
-    "#                          or somme(value)>=quartile2)\n",
-    "#                         print(quartile1,quartile2)\n",
-    "print(quartile1)\n",
-    "#                         print(index_to_remove)\n",
-    "#                         assert(True==False)\n",
-    "voc_dict_triplet={key:value for key,value in voc_dict_triplet.items() if key not in index_to_remove}\n",
-    "with open('data_'+str(count)+'.json', 'w') as fp:\n",
-    "    json.dump(voc_dict_triplet, fp)\n",
-    "voc_dict_triplet={key:[] for key in voc_dict_triplet.keys()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'né'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp=max(voc_dict_triplet,key=lambda x:sys.getsizeof(voc_dict_triplet[x]))\n",
-    "# sys.getsizeof(voc_dict_triplet[tmp])\n",
-    "tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sizeof_fmt(num, suffix='B'):\n",
-    "    ''' By Fred Cirera, after https://stackoverflow.com/a/1094933/1870254'''\n",
-    "    for unit in ['','Ki','Mi','Gi','Ti','Pi','Ei','Zi']:\n",
-    "        if abs(num) < 1024.0:\n",
-    "            return \"%3.1f%s%s\" % (num, unit, suffix)\n",
-    "        num /= 1024.0\n",
-    "    return \"%.1f%s%s\" % (num, 'Yi', suffix)\n",
-    "\n",
-    "for name, size in sorted(((name, sys.getsizeof(value)) for name,value in locals().items()),\n",
-    "                         key= lambda x: -x[1])[:10]:\n",
-    "    print(\"{:>30}: {:>8}\".format(name,sizeof_fmt(size)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(484987, 25165920)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(voc_dict_triplet),sys.getsizeof(voc_dict_triplet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# f = open('../Database/dataset.json')\n",
-    "# dataset = json.load(f)\n",
-    "# f.close()\n",
-    "# dataset={int(key):[value[0],int(value[1]),value[2],value[3],value[4]] for key,value in dataset.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# conn = sqlite3.connect('../Database/info.db')\n",
-    "# cursor = conn.cursor()\n",
-    "# create_db=\"CREATE TABLE Informations(ID NUMERIC,Title TEXT,URL TEXT,Location TEXT,Line_index NUMERIC);\"\n",
-    "# cursor.execute(create_db)\n",
-    "# index=\"CREATE INDEX index_id ON Informations (ID);\"\n",
-    "# cursor.execute(index)"
    ]
   },
   {
@@ -420,25 +266,6 @@
     "del voc_dict_triplet\n",
     "print(\"Second Step\")\n",
     "C=get_C(M,dataset,new_voc_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# query=\"théorie des graphes et des cliques et des graphes complets et des graphes bipartis\"\n",
-    "# get_closest_articles(C,M,new_voc_dict,dataset,query,k=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "3+4"
    ]
   },
   {
@@ -478,128 +305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gabriel\n"
-     ]
-    }
-   ],
-   "source": [
-    "a,b=get_counters(\"gabriel\")\n",
-    "for key in a.keys():\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C=C.todok()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'coo_matrix' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-b2ab0f67944f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mC\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mincrease_title_weights2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-5-732cc13e8990>\u001b[0m in \u001b[0;36mincrease_title_weights2\u001b[0;34m(C)\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounter_text\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_voc_dict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                     \u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnew_voc_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnew_voc_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'coo_matrix' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "C=increase_title_weights2(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def increase_title_weights2(C):\n",
-    "    for i in range(C.shape[0]):\n",
-    "        article_title=dataset[i][1]\n",
-    "        counter_text,counter_bigrams=get_counters(article_title)\n",
-    "        if len(counter_text)==1:\n",
-    "            for key in counter_text.keys():\n",
-    "                if key in new_voc_dict:\n",
-    "                    C[i,new_voc_dict[key]]=2*C[i,new_voc_dict[key]]\n",
-    "        if i%10000==0:\n",
-    "            print(i)\n",
-    "    return C"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "query=\"théorie des graphes et des cliques et des graphes complets et des graphes bipartis\"\n",
     "result_list=get_closest_articles(C,M,new_voc_dict,dataset,query,k=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u, s, vt = svds(C, k=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w=u*s.reshape(1,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f8bcc149630>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "ax.scatter3D(w[:1000,0],w[:1000,1],w[:1000,2])"
    ]
   }
  ],
