--- a/Python_Notebook/Wor2Vec.ipynb
+++ b/Python_Notebook/Wor2Vec.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook computes the word2vec vectors of each article and insert it into a database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -59,6 +66,26 @@
     "    cleanr = re.compile('<.*?>')\n",
     "    cleantext = re.sub(cleanr, '', text)\n",
     "    return cleantext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the database for storing w2v vectors\n",
+    "# we don't save the dataset as a json file because it would be too big, so we directly insert the result into the database\n",
+    "conn = sqlite3.connect('../Database/Database.db')\n",
+    "cursor = conn.cursor()\n",
+    "create_db=\"CREATE TABLE Vectors(ID NUMERIC,\"\n",
+    "for i in range(1,201):\n",
+    "    create_db+=\"c\"+str(i)+\" REAL,\"\n",
+    "create_db=create_db[:-1]+\");\"\n",
+    "cursor.execute(create_db)\n",
+    "index=\"CREATE INDEX index_id ON Vectors (ID);\"\n",
+    "cursor.execute(index)\n",
+    "conn.close()"
    ]
   },
   {
@@ -103,360 +130,13 @@
     "                lines = [line.rstrip('\\n') for line in f]\n",
     "            for line in lines:\n",
     "                a=json.loads(line)\n",
-    "                aa=time.time()\n",
     "                if 'text' in a:\n",
     "                    tmp=get_vector_word2vec(a['text']).astype(\"float16\")\n",
     "                    if type(tmp)==np.ndarray:                   \n",
-    "#                         dataset=np.insert(dataset,len(dataset),[a['id']]+tmp.tolist(),axis=0)\n",
     "                        to_bdd=[a['id']]+tmp.tolist()\n",
     "                        insert=\"INSERT INTO Vectors VALUES (\"+','.join(str(i) for i in to_bdd)+\");\"\n",
     "                        cursor.execute(insert)\n",
-    "                count+=1\n",
-    "                bb=time.time()\n",
-    "#                 print(bb-aa)\n",
-    "                if count%500000==0:\n",
-    "                    print(count)\n",
-    "                    cursor.execute(\"Select count(ID) from Vectors\")\n",
-    "                    print(cursor.fetchone())\n",
-    "#                 if count==500000:\n",
-    "#                     s=q\n",
-    "\n",
-    "#     print(w)\n",
-    "#     if w==5:\n",
-    "#         break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = sqlite3.connect('../Database/word2vec.db')\n",
-    "cursor = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 3])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=np.array([0,1,2,3])\n",
-    "# mask = np.isnan(a)\n",
-    "# ma = np.ma.masked_array(a, mask=mask)\n",
-    "b=[True,True,False,True]\n",
-    "a[b]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cursor.execute(\"Select * from Vectors limit 10\")\n",
-    "cursor.execute(\"SELECT * FROM Vectors v WHERE v.ID IN (SELECT ID FROM Vectors ORDER BY RANDOM() LIMIT 1000)\")\n",
-    "tmp=cursor.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.mplot3d import Axes3D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca=PCA(3)\n",
-    "tmp=pca.fit_transform(np.array(list(tmp))[:,1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f07962b7550>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "ax.scatter(tmp[:,0],tmp[:,1],tmp[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import random_projection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f3dc09e8d50>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cursor.execute(\"DROP TABLE Vectors;\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f3dc09e8d50>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "create_db=\"CREATE TABLE Vectors(ID NUMERIC,\"\n",
-    "for i in range(1,201):\n",
-    "    create_db+=\"c\"+str(i)+\" REAL,\"\n",
-    "create_db=create_db[:-1]+\");\"\n",
-    "cursor.execute(create_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f3dc09e8d50>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index=\"CREATE INDEX index_id ON Vectors (ID);\"\n",
-    "cursor.execute(index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0,)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cursor.execute(\"Select count(ID) from Vectors\")\n",
-    "cursor.fetchone()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cursor.execute(\"Select * from Vectors where ID='7405227';\")\n",
-    "# result=cursor.fetchone()\n",
-    "# np.array(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7fef93c3b030>"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# delete=\"DELETE FROM Vectors;\"\n",
-    "# c.execute(delete)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "50000\n",
-      "100000\n",
-      "150000\n",
-      "200000\n",
-      "250000\n",
-      "300000\n",
-      "350000\n",
-      "400000\n",
-      "450000\n"
-     ]
-    }
-   ],
-   "source": [
-    "for index in range(len(dataset)):\n",
-    "    insert=\"INSERT INTO Vectors VALUES (\"+','.join(str(i) for i in dataset[index])+\");\"\n",
-    "    cursor.execute(insert)\n",
-    "    if index%50000==0:\n",
-    "        print(index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save(\"word2vec.npy\",a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=np.load(\"word2vec.npy\",mmap_mode=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "memmap([[      inf, -0.0564  , -0.2136  , ..., -0.1781  ,  0.1241  ,\n",
-       "         -0.01423 ],\n",
-       "        [      inf, -0.02544 , -0.2303  , ...,  0.02162 ,  0.10095 ,\n",
-       "         -0.1148  ],\n",
-       "        [      inf,  0.03546 , -0.1021  , ..., -0.1285  , -0.04114 ,\n",
-       "         -0.0247  ],\n",
-       "        [      inf,  0.1069  , -0.004646, ..., -0.3828  ,  0.0366  ,\n",
-       "          0.1256  ],\n",
-       "        [      inf,  0.00224 , -0.1034  , ..., -0.05096 , -0.02939 ,\n",
-       "         -0.0612  ],\n",
-       "        [      inf, -0.0157  , -0.0791  , ..., -0.1245  ,  0.03494 ,\n",
-       "         -0.09186 ]], dtype=float16)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[:6,:]"
+    "                count+=1"
    ]
   }
  ],
